# bitshuffle

src/: CMakeLists.txt  bitshuffle_core.c  bitshuffle_core.h
